--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.1",
+    "@nguniversal/express-engine": "^16.2.0-rc.0",
+    "@nguniversal/module-map-ngfactory-loader": "^9.0.0-next.9",
     "express": "^4.18.2",
+    "or": "^0.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
