--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.1",
     "@nguniversal/express-engine": "^16.2.0-rc.0",
     "@nguniversal/module-map-ngfactory-loader": "^9.0.0-next.9",
+    "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
     "or": "^0.2.0",
     "rxjs": "~7.8.0",
